# pyrfp

./: .gitignore  README.md  pyproject.toml
demo/: rfp.ipynb  rosenbluth_potential.ipynb
pyrfp/: model_tools.py  simulator.py  training.py  training_data.py  training_model.py  training_runner.py  training_tools.py  types.py
pyrfp/simulators/: dsmc.py  rfp.py
tests/: test_potentials.py  test_simulators.py  test_tools.py  test_training.py
