[tool.poetry]
name = "pyrfp"
version = "0.1.2"
description = "Python package for the data-driven Rosenbluth-Fokker-Planck equation."
authors = ["Kyoungseoun Chung <kyoungseoun.chung@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pymytools = "^0.1.12"
pymaxed = "^0.1.7"
pyapes = "^0.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
pre-commit = "^3.1.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-s"
